--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <title>cscoder.tech</title>
   <link rel="manifest" href="manifest.json">
+  <script src="main.dart.js"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
